finetuning home page

--- a/Petstagram/templates/accounts/login-page.html
+++ b/Petstagram/templates/accounts/login-page.html
@@ -22,7 +22,7 @@
                 </a>
 
                 <!-- Link to Home Page -->
-                <a class="home" href="#">
+                <a class="home" href="http://localhost:8000">
                     <i>Petstagram</i>
                 </a>
             </div>
@@ -32,28 +32,28 @@
                     <li class="nav-item">
 
                         <!-- Link to Add Pet Page -->
-                        <a href="#">
+                        <a href="http://localhost:8000/pets/add/">
                             <i>Add Pet</i>
                         </a>
                     </li>
                     <li class="nav-item">
 
                         <!-- Link to Add Photo Page -->
-                        <a href="#">
+                        <a href="http://localhost:8000/photos/add/">
                             <i>Add Photo</i>
                         </a>
                     </li>
                     <li class="nav-item">
 
                         <!-- Link to Login Page -->
-                        <a href="#">
+                        <a href="http://localhost:8000/accounts/login/">
                             <i>Login</i>
                         </a>
                     </li>
                     <li class="nav-item">
 
                         <!-- Link to Register Page -->
-                        <a href="">
+                        <a href="http://localhost:8000/accounts/register/">
                             <i>Register</i>
                         </a>
                     </li>
