--- a/Petstagram/templates/common/home-page.html
+++ b/Petstagram/templates/common/home-page.html
@@ -19,13 +19,13 @@
         <div class="container">
             <div class="logo">
                 <!-- Link to Home Page -->
-                <a href="#">
+                <a href="http://localhost:8000">
                     <img width="50px" src="{% static '/images/free-30-instagram-stories-icons23_122570.png' %}"
                          alt="img1">
                 </a>
 
                 <!-- Link to Home Page -->
-                <a class="home" href="#">
+                <a class="home" href="http://localhost:8000">
                     <i>Petstagram</i>
                 </a>
             </div>
@@ -35,35 +35,35 @@
                     <li class="nav-item">
 
                         <!-- Link to Add Pet Page -->
-                        <a href="#">
+                        <a href="http://localhost:8000/pets/add/">
                             <i>Add Pet</i>
                         </a>
                     </li>
                     <li class="nav-item">
 
                         <!-- Link to Add Photo Page -->
-                        <a href="#">
+                        <a href="http://localhost:8000/photos/add/">
                             <i>Add Photo</i>
                         </a>
                     </li>
                     <li class="nav-item">
 
                         <!-- Link to Login Page -->
-                        <a href="#">
+                        <a href="http://localhost:8000/accounts/login/">
                             <i>Login</i>
                         </a>
                     </li>
                     <li class="nav-item">
 
                         <!-- Link to Register Page -->
-                        <a href="">
+                        <a href="http://localhost:8000/accounts/register/">
                             <i>Register</i>
                         </a>
                     </li>
                     <li class="nav-item">
 
                         <!-- Link to Profile Page -->
-                        <a href="#">
+                        <a href="http://localhost:8000/accounts/profile/">
                             <i>Profile</i>
                         </a>
                     </li>
@@ -103,7 +103,7 @@
                 <div class="top">
                     <div class="userDetails">
                         <!-- Link to User Profile Page -->
-                        <a href="#">
+                        <a href="">
                             <div class="profilepic">
                                 <div class="profile_img">
                                     <div class="image">
