--- a/Artonia/templates/navigation.html
+++ b/Artonia/templates/navigation.html
@@ -1,16 +1,16 @@
 <ul class="menu">
     <li class="menu-item">
-        <a href="#" class="menu-link">
+        <a href="{% url 'dash' %}" class="menu-link">
             <i class="ai-home"></i>
             <span>Home</span>
         </a>
     </li>
-    <li class="menu-item">
-        <a href="#" class="menu-link">
-            <i class="ai-file"></i>
-            <span>Dashboard</span>
-        </a>
-    </li>
+{#    <li class="menu-item">#}
+{#        <a href="#" class="menu-link">#}
+{#            <i class="ai-file"></i>#}
+{#            <span>Dashboard</span>#}
+{#        </a>#}
+{#    </li>#}
     <li class="menu-item">
         <a href="{% url 'add-macrame' %}" class="menu-link">
             <i class="ai-circle-plus"></i>
@@ -18,27 +18,28 @@
         </a>
     </li>    
     <li class="menu-item">
-        <a href="#" class="menu-link">
+        <a href="{% url 'add-art-painting' %}" class="menu-link">
             <i class="ai-book-open"></i>
-            <span>Books</span>
+            <span>Add new Art Painting</span>
         </a>
     </li>
-    <li class="menu-item">
-        <a href="#" class="menu-link">
-            <i class="ai-bell"></i>
-            <span>Notifications</span>
-        </a>
-    </li>
-    <li class="menu-item">    
-        <a href="#" class="menu-link">
-            <i class="ai-gear"></i>
-            <span>Settings</span>
-        </a>
-    </li>
-    <li class="menu-item">
-        <a href="#" class="menu-link">
-            <i class="ai-person"></i>
-            <span>Profile</span>
-        </a>
-    </li>
+{#    <li class="menu-item">#}
+{#        <a href="#" class="menu-link">#}
+{#            <i class="ai-bell"></i>#}
+{#            <span>Notifications</span>#}
+{#        </a>#}
+{#    </li>#}
+{#    <li class="menu-item">    #}
+{#        <a href="#" class="menu-link">#}
+{#            <i class="ai-gear"></i>#}
+{#            <span>Settings</span>#}
+{#        </a>#}
+{#    </li>#}
+{#    <li class="menu-item">#}
+{#        <a href="#" class="menu-link">#}
+{#            <i class="ai-person"></i>#}
+{#            <span>Profile</span>#}
+{#        </a>#}
+{#    </li>#}
 </ul>
+
