--- a/Artonia/templates/products_in_table.html
+++ b/Artonia/templates/products_in_table.html
@@ -26,7 +26,9 @@
                 <!-- Loop through each product and create a table row -->
                 {% for m in macrame %}
                     <tr>
-                        <td><a href="{% url 'edit-macrame' m.id %}">Edit</a></td>
+                        <td>
+                            <a href="{% url 'edit-macrame' m.id %}" class="btn btn-success btn-sm">Edit</a>
+                        </td>
                         <td>{{ m.name }}</td>
                         <td>{{ m.description }}</td>
                         <td>{{ m.price }}</td>
@@ -45,6 +47,7 @@
             <table class="table border border-0"  style="text-align: left">
                 <thead class="table-success">
                 <tr>
+                    <th>Options</th>
                     <th>Name</th>
                     <th>Description</th>
                     <th>Price</th>
@@ -54,6 +57,9 @@
                 <!-- Loop through each product and create a table row -->
                 {% for a in art_paintings %}
                     <tr>
+                        <td>
+                            <a href="{% url 'edit-art-painting' a.id %}" class="btn btn-success btn-sm">Edit</a>
+                        </td>
                         <td>{{ a.name }}</td>
                         <td>{{ a.description }}</td>
                         <td>{{ a.price }}</td>
