Added Media Media Files & pictures to be visible in the main page

--- a/Artonia/static/css/styles.css
+++ b/Artonia/static/css/styles.css
@@ -153,3 +153,8 @@ table {
 .button-edit:active {
     background-color: #005b0e;  /* Even darker green when clicked */
 }
+
+article .title {
+    margin-top: 40px !important; /* Force margin to apply */
+    text-align: center !important; /* Optional: center the text */
+}
