--- a/Artonia/templates/products_in_table.html
+++ b/Artonia/templates/products_in_table.html
@@ -6,11 +6,7 @@
     {% include 'navigation.html' %}
 <section class="section">
     <article class="container">
-        <div class="container-fluid">
-            <h1>
-                <span class="mx-auto" style="width: 200px;">Macrame</span>
-            </h1>
-        </div>
+    <h1 type="title">Macrame</h1>
         <!-- Check if the product list is not empty -->
         {% if macrame %}
             <table class="table border border-0" style="text-align: left">
@@ -20,6 +16,7 @@
                     <th>Name</th>
                     <th>Description</th>
                     <th>Price</th>
+                    <th>Picture</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -27,11 +24,18 @@
                 {% for m in macrame %}
                     <tr>
                         <td>
-                            <a href="{% url 'edit-macrame' m.id %}" class="btn btn-success btn-sm">Edit</a>
+                            <a href="{% url 'edit-macrame' m.id%}" class="btn btn-success btn-sm">Edit</a>
                         </td>
                         <td>{{ m.name }}</td>
                         <td>{{ m.description }}</td>
                         <td>{{ m.price }}</td>
+                        <td>
+                            {% if m.image %}
+                                <img src="{{ m.image.url }}" width="50" height="50" alt="Macrame">
+                            {% else %}
+                                <p>No Image</p>
+                            {% endif %}
+                        </td>
                     </tr>
                 {% endfor %}
                 </tbody>
@@ -51,6 +55,7 @@
                     <th>Name</th>
                     <th>Description</th>
                     <th>Price</th>
+                    <th>Picture</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -63,6 +68,13 @@
                         <td>{{ a.name }}</td>
                         <td>{{ a.description }}</td>
                         <td>{{ a.price }}</td>
+                        <td>
+                            {% if a.image %}
+                                <img src="{{ a.image.url }}" width="50" height="50" alt="Art Painting">
+                            {% else %}
+                                <p>No Image</p>
+                            {% endif %}
+                        </td>
                     </tr>
                 {% endfor %}
                 </tbody>
