Photo Details page and Pet details page fixed + Comments ordering added.

--- a/Petstagram/templates/photos/photo-details-page.html
+++ b/Petstagram/templates/photos/photo-details-page.html
@@ -34,13 +34,15 @@
                             <br>
 
                             <!-- IF the photo has location -->
-                            <span>Bansko, Bulgaria</span>
+                                {% if photo.location %}
+                                    <span>{{ photo.location }}</span>
+                                {% endif %}
 
                             <!-- IF the viewer is the creator of the photo -->
                             <div class="edit-delete-btns">
 
                                 <!-- Link to Edit Pet Photo Page -->
-                                <a href="#">
+                                <a href="{% url 'photo-edit' photo.pk %}">
                                     <img class="edit-img" src="{% static 'images/edit-pen-icon-6.jpg' %}"
                                          alt="edit button">
                                 </a>
@@ -70,24 +72,25 @@
                     <!-- Start Like and Share Buttons Section -->
                     <div class="actionBtns">
                         <div class="left">
-
                             <!-- Start Like Button -->
                             <span class="heart">
-
-                                    <!-- Link to Like Path -->
-                                    <a href="#">
-                                        <!-- if user has liked the photo -->
-                                        <!-- <i class="fa-solid fa-heart" style="color: #ed4040;"></i> -->
-                                        <!-- else -->
-                                        <i class="fa-regular fa-heart"></i>
-                                    </a>
+                            <!-- Link to Like Path -->
+                                <a href="{% url 'like' photo.id %}">
+                               <!-- if user has liked the photo -->
+                                   {% if photo.like_set.all %}
+                                       <i class="fa-solid fa-heart" style="color: #ed4040;"></i>
+                                       <!-- else -->
+                                   {% else %}
+                                       <i class="fa-regular fa-heart"></i>
+                                   {% endif %}
+                                </a>
                             </span>
                             <!-- End Like Button -->
 
                             <!-- Start Share  Button -->
 
                             <!-- Link to Share Path -->
-                            <a href="#">
+                            <a href="{% url 'share' photo.id %}">
                                 <i class="fa-solid fa-share"></i>
                             </a>
                         </div>
@@ -95,15 +98,20 @@
                     <!-- End Like and Share Buttons Section -->
 
                     <!-- Number of Likes for the Photo -->
-                    <p class="likes">203 likes</p>
+                    <p class="likes">{{ likes.count }}</p>
 
                     <!-- Start Tagged Pets Section-->
                     <!-- Link to First Tagged Pet Details Page -->
-                    <a href="#">
-                        <p class="message">
-                            <b>Sasho</b>
-                        </p>
-                    </a>
+                       {% for pet in photo.tagged_pets.all %}
+                           <!-- Link to First Tagged Pet Details Page -->
+                           <a href="{% url 'pet-details-page' "username" pet.slug %}">
+                               <p class="message">
+                                   <b>{{ pet.name }}</b>
+                               </p>
+                           </a>
+                           <!-- End Tagged Pets Section-->
+                       {% endfor %}
+
                     <!-- Link to Second Tagged Pet Details Page -->
                     <a href="#">
                         <p class="message">
@@ -116,9 +124,10 @@
                     <p class="pet-details">This is my pet</p>
 
                     <!-- Date of Publication or edit of the Photo -->
-                    <h5 class="postTime">19/09/2022</h5>
+                    <h5 class="postTime">{{ photo.date_of_publication }}</h5>
 
                     <!-- Start Comments Section -->
+                    {% for comment in comments %}
                     <div class="comments">
                         <div class="top">
                             <div class="userDetails">
@@ -136,12 +145,13 @@
                                         <!-- User First and/or Last Name or username-->
                                         <a href="">Steven Ivanov</a>
                                         <!-- User Comment -->
-                                        - OMG where can i get one
+                                        {{ comment.text }}
                                     </p>
                                 </div>
-                                <span>Sept. 20, 2022, 5:02 p.m.</span>
+                                <span>{{ comment.date_time_of_publication }}</span>
                             </div>
                         </div>
+                        {% endfor %}
                     </div>
                     <!-- End Comments Section -->
                 </div>
