--- a/Petstagram/templates/common/pet-posts.html
+++ b/Petstagram/templates/common/pet-posts.html
@@ -49,7 +49,7 @@
                                    {% endif %}
                                 </a>
                             </span>
-                        <a href="share">
+                        <a href="{% url 'share' photo.id %}">
                             <i class="fa-solid fa-share"></i>
                         </a>
                     </div>
@@ -77,7 +77,7 @@
                 <a href="{% url 'photo-details' photo.pk %}">
                     <h4 class="details">See details</h4>
                 </a>
-            
+
                 <h5 class="postTime">19/09/2022</h5>
                 <h5 class="postTime">{{ photo.date_of_publication }}</h5>
                 <!-- add comments section -->
