--- a/Petstagram/templates/common/home-page.html
+++ b/Petstagram/templates/common/home-page.html
@@ -6,14 +6,17 @@
         <div class="col-9">
 
             <!-- Start Searchbar Form -->
-            <form class="searchbar" method="post">
-                <input type="text" placeholder="Search by pet name...">
+            <form class="searchbar">
+                {{ search_form }}
                 <button>
                     <img src="{% static '/images/search.png' %}" height="18" alt="img2">
                 </button>
             </form>
             <!-- End Searchbar Form -->
-        {% include 'common/pet-posts.html' %}
+            {% for photo in all_photos %}
+                {% include 'common/pet-posts.html' %}
+            {% endfor %}
+
         </div>
     </div>
 {% endblock %}
