--- a/Petstagram/templates/common/pet-posts.html
+++ b/Petstagram/templates/common/pet-posts.html
@@ -32,7 +32,7 @@
             </div>
             <!-- Post image -->
             <div class="imgBx" id={{ photo.id }}>
-                <img src="{% static 'images/axolotl.jpeg' %}" alt="post" class="cover">
+                <img src="{{ photo.photo.url }}" alt="post" class="cover">
             </div>
             <!-- -->
             <div class="bottom">
