--- a/ExamPrepOne/templates/album-details.html
+++ b/ExamPrepOne/templates/album-details.html
@@ -1,36 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>My Music App</title>
-    <!-- Static Load -->
-    <link rel="stylesheet" href="/static/css/style.css" />
-  </head>
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
 
-  <body>
-    <div id="box">
-      <!-- Navigation Bar -->
-      <header>
-        <nav>
-          <img src="/static/images/headphones.png" alt="headphones" />
-          <a href="#">Home</a>
-          <ul></ul>
-          <ul>
-            <!--Only for user with created profile-->
-            <li><a href="#">Create Album</a></li>
-            <li><a href="#">Profile</a></li>
-          </ul>
-        </nav>
-      </header>
-      <!-- End Navigation Bar -->
-
-      <!-- Main Content -->
-      <!--Details Page-->
       <section id="detailsPage">
         <div class="wrapper">
           <div class="albumCover">
             <!-- Album Image -->
-            <img src="/static/images/Lorde.jpg" alt="Cover Image" />
+            <img src="{% static 'images/Lorde.jpg' %}" alt="Cover Image" />
           </div>
 
           <div class="albumInfo">
@@ -49,18 +25,11 @@
 
             <div class="actionBtn">
               <!-- Album Buttons -->
-              <a href="#" class="edit">Edit</a>
-              <a href="#" class="remove">Delete</a>
+              <a href="{% url 'album_edit' %}" class="edit">Edit</a>
+              <a href="{% url 'album_delete' %}" class="remove">Delete</a>
             </div>
           </div>
         </div>
       </section>
-
-      <!-- Footer -->
-      <footer>
-        <div>&copy;SoftUni Team 2024. All rights reserved.</div>
-      </footer>
-      <!-- End Footer -->
-    </div>
-  </body>
-</html>
+	
+{% endblock %}
