--- a/ExamPrepOne/templates/home-with-profile.html
+++ b/ExamPrepOne/templates/home-with-profile.html
@@ -1,40 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>My Music App</title>
-    <!-- Static Load -->
-    <link rel="stylesheet" href="/static/css/style.css" />
-  </head>
+{% extends 'base.html' %}
+{% load static %}
 
-  <body>
-    <div id="box">
-      <!-- Navigation Bar -->
-      <header>
-        <nav>
-          <img src="/static/images/headphones.png" alt="headphones" />
-          <a href="#">Home</a>
-          <ul></ul>
-          <ul>
-            <!--Only for user with created profile-->
-            <li><a href="#">Create Album</a></li>
-            <li><a href="#">Profile</a></li>
-          </ul>
-        </nav>
-      </header>
-      <!-- End Navigation Bar -->
-
-      <!-- Main Content -->
-      <!-- Catalog with Albums-->
-      <section id="catalogPage">
+{% block content %}
+    
+	<section id="catalogPage">
         <!--  If No albums in catalog -->
-        <p>No Albums in Catalog!</p>
-
-        <!-- If albums in catalog -->
-        <h1>All Albums</h1>
+        {% if no_albums_message %}
+            <p>{{ no_albums_message }}</p>
+        {% else %}
+            <ul>
+                {% for album in albums %}
+                    <li>{{ album.title }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
         <!-- First Card-Box in catalog -->
         <div class="card-box">
-          <img src="/static/images/BrandiCarlile.png" alt="Cover Image" />
+          <img src="{% static 'images/BrandiCarlile.png' %}" alt="Cover Image" />
           <div>
             <div class="text-center">
               <p class="name">Name: In These Silent Days</p>
@@ -43,7 +25,7 @@
               <p class="price">Price: $12.80</p>
             </div>
             <div class="btn-group">
-              <a href="#">Details</a>
+              <a href="{% url 'album_details' %}">Details</a>
             </div>
           </div>
         </div>
@@ -51,7 +33,7 @@
 
         <!-- Second Card-Box in catalog -->
         <div class="card-box">
-          <img src="/static/images/pinkFloyd.jpg" />
+          <img src="{% static 'images/pinkFloyd.jpg' %}" />
           <div>
             <div class="text-center">
               <p class="name">Name: The Dark Side of the Moon</p>
@@ -60,7 +42,7 @@
               <p class="price">Price: $28.75</p>
             </div>
             <div class="btn-group">
-              <a href="#">Details</a>
+              <a href="{% url 'album_details' %}">Details</a>
             </div>
           </div>
         </div>
@@ -68,7 +50,7 @@
 
         <!-- Third Card-Box in catalog -->
         <div class="card-box">
-          <img src="/static/images/Lorde.jpg" />
+          <img src="{% static 'images/Lorde.jpg' %}" />
           <div>
             <div class="text-center">
               <p class="name">Name: Melodrama</p>
@@ -77,18 +59,12 @@
               <p class="price">Price: $7.33</p>
             </div>
             <div class="btn-group">
-              <a href="#">Details</a>
+              <a href="{% url 'album_details' %}">Details</a>
             </div>
           </div>
         </div>
         <!-- End Third Card-Box in catalog -->
       </section>
-
-      <!-- Footer -->
-      <footer>
-        <div>&copy;SoftUni Team 2024. All rights reserved.</div>
-      </footer>
-      <!-- End Footer -->
-    </div>
-  </body>
-</html>
+    
+{% endblock %}
+      
