--- a/ExamPrepOne/templates/album-details.html
+++ b/ExamPrepOne/templates/album-details.html
@@ -12,21 +12,17 @@
           <div class="albumInfo">
             <div class="albumText">
               <!-- Album Info -->
-              <h1>Name: Melodrama</h1>
-              <h3>Artist: Lorde</h3>
-              <h4>Genre: Pop Music</h4>
-              <h4>Price: $7.33</h4>
-              <p>
-                Description: Melodrama is the second studio album by New Zealand
-                singer-songwriter Lorde. It was released on 16 June 2017 by Lava
-                and Republic Records and distributed through Universal.
-              </p>
+              <h1>{{ album.album_name }}</h1>
+              <h3>{{ album.artist }}</h3>
+              <h4>{{ album.genre }}</h4>
+              <h4>${{ album.price }}</h4>
+              <p>{{ album.description }}</p>
             </div>
 
             <div class="actionBtn">
               <!-- Album Buttons -->
-              <a href="{% url 'album_edit' %}" class="edit">Edit</a>
-              <a href="{% url 'album_delete' %}" class="remove">Delete</a>
+                <a href="{% url 'album_edit' album.pk %}" class="edit">Edit</a> 
+              <a href="#" class="remove">Delete</a>
             </div>
           </div>
         </div>
