--- a/ExamPrepOne/templates/album-details.html
+++ b/ExamPrepOne/templates/album-details.html
@@ -22,7 +22,7 @@
             <div class="actionBtn">
               <!-- Album Buttons -->
                 <a href="{% url 'album_edit' album.pk %}" class="edit">Edit</a> 
-              <a href="#" class="remove">Delete</a>
+              <a href="{% url 'album_delete' album.pk %}" class="remove">Delete</a>
             </div>
           </div>
         </div>
