--- a/ExamPrepOne/templates/home-with-profile.html
+++ b/ExamPrepOne/templates/home-with-profile.html
@@ -2,33 +2,58 @@
 {% load static %}
 
 {% block content %}
-    
+    <nav>
+        <ul>
+            <!--Only for user with created profile-->
+            <li><a href="{% url 'add_album' %}">Create Album</a></li>
+            <li><a href="{% url 'profile-details' %}">Profile</a></li>
+        </ul>
+    </nav>
 	<section id="catalogPage">
-        <!--  If No albums in catalog -->
-        {% if no_albums_message %}
-            <p>{{ no_albums_message }}</p>
-        {% else %}
-            <ul>
-                {% for album in albums %}
-                    <li>{{ album.title }}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}
+        <h1>
+            All Albums for you {{ profile }}
+        </h1>
         <!-- First Card-Box in catalog -->
-        <div class="card-box">
-          <img src="{% static 'images/BrandiCarlile.png' %}" alt="Cover Image" />
-          <div>
-            <div class="text-center">
-              <p class="name">Name: In These Silent Days</p>
-              <p class="artist">Artist: Brandi Carlile</p>
-              <p class="genre">Genre: Other</p>
-              <p class="price">Price: $12.80</p>
+            <div class="card-box">
+                {% if albums %}
+                    {% for album in albums %}
+                        <div class="card-box">
+                            <!-- Ensure you use the correct image field from the Album model -->
+                            <img src="{{ album.image_url }}" width="150px" alt="Cover Image" />
+                            <div>
+                                <p class="name">Name: {{ album.album_name }}</p>
+                                <p class="artist">Artist: {{ album.artist }}</p>
+                                <p class="genre">Genre: {{ album.genre }}</p>
+                                <p class="price">Price: ${{ album.price }}</p>
+                            </div>
+                            <div class="btn-group">
+                                <a href="#">Details</a>
+                            </div>
+                        </div>
+                    {% endfor %}
+                {% else %}
+                    <p>No albums found!</p>
+                {% endif %}
             </div>
-            <div class="btn-group">
-              <a href="{% url 'album_details' %}">Details</a>
-            </div>
-          </div>
-        </div>
+        
+        
+{#            <div class="card-box">#}
+{#                {% for album in albums %}#}
+{#                    <img src='{{ albums }}' alt="Cover Image" />#}
+{#                        <div>#}
+{#                            <div class="text-center">#}
+{#                              <p class="name">Name: {{ album.album_name }}</p>#}
+{#                              <p class="artist">Artist: {{ album.artist }}</p>#}
+{#                              <p class="genre">Genre: {{ album.genre }}</p>#}
+{#                              <p class="price">Price: ${{ album.price }}</p>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    <div class="btn-group">#}
+{#                      <a href="#">Details</a>#}
+{#                    </div>#}
+{#                {% endfor %}#}
+{#            </div>#}
+
         <!-- End First Card-Box in catalog -->
 
         <!-- Second Card-Box in catalog -->
@@ -42,7 +67,7 @@
               <p class="price">Price: $28.75</p>
             </div>
             <div class="btn-group">
-              <a href="{% url 'album_details' %}">Details</a>
+              <a href="#">Details</a>
             </div>
           </div>
         </div>
@@ -59,7 +84,7 @@
               <p class="price">Price: $7.33</p>
             </div>
             <div class="btn-group">
-              <a href="{% url 'album_details' %}">Details</a>
+              <a href="#">Details</a>
             </div>
           </div>
         </div>
