--- a/ExamPrepOne/templates/profile-details.html
+++ b/ExamPrepOne/templates/profile-details.html
@@ -13,10 +13,13 @@
 
           <div class="profileText">
             <!-- Profile Info -->
-            <h1>Username: testUser_12345</h1>
-            <h1>Email: testuser@email.com</h1>
-            <h1>Age: 27</h1>
-            <h1>Albums: 3</h1>
+              <form method="get" >
+                  <h1>Username: {{ profile.username }}</h1>
+                  <h1>Email: {{ profile.email }}</h1>
+                  <h1>Age: {{ profile.age }}</h1>
+                  <h1>Albums: {{ profile.albums.count }}</h1>
+              </form>
+
           </div>
 
           <div class="actionBtn">
