--- a/ExamPrep_WOS/templates/base.html
+++ b/ExamPrep_WOS/templates/base.html
@@ -15,27 +15,27 @@
     <header>
         <!-- Navigation Bar -->
         <h1>
-            <a class="index-navigation" href="#"
+            <a class="index-navigation" href="{% url 'home' %}"
             ><span>World of Speed</span></a
             >
         </h1>
         <nav>
             {% get_user as profile %}
-            {% if not get_user %}
-                <!-- if the user has not created a profile -->
-                <a href="#">Create Profile</a>
-            {% else %}
+            {% if profile %}
                 <!-- if the user has created a profile -->
-                <a href="#">Catalogue</a>
-                <a href="#">Create Car</a>
-                <a href="#">Profile</a>
+                <a href="{% url 'catalog' %}">Catalogue</a>
+                <a href="{% url 'car_create' %}">Create Car</a>
+                <a href="{% url 'profile_details' %}">Profile</a>
+            {% else %}
+                <!-- if the user has not created a profile -->
+                <a href="{% url 'profile_create' %}">Create Profile</a>
             {% endif %}
         </nav>
     </header>
-    
+
     {% block content %}
     {% endblock %}
-    
+
 </div>
 <!-- Footer -->
 <footer>&copy;SoftUni Team 2024. All rights reserved.</footer>
