--- a/ExamPrep_WOS/templates/index.html
+++ b/ExamPrep_WOS/templates/index.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+    <!-- if the user has not created a profile -->
+{#    <a href="{% url 'profile_create' %}">Create Profile</a>#}
     <section id="index-headline">
         <div class="index-message">
             <h2>Welcome <span>to</span> the <span>World</span> of<span>Speed</span>!</h2>
