--- a/ExamPrep_WOS/templates/profile/profile-details.html
+++ b/ExamPrep_WOS/templates/profile/profile-details.html
@@ -27,8 +27,8 @@
                 <p class="description">Total price: 398000.000</p>
                 <!-- Edit/Delete buttons -->
                 <div class="buttons">
-                    <a href="#" class="edit-button">Edit</a>
-                    <a href="#" class="delete-button">Delete</a>
+                    <a href="{% url 'profile_edit' %}" class="edit-button">Edit</a>
+                    <a href="{% url 'profile_delete' %}" class="delete-button">Delete</a>
                 </div>
             </div>
         </div>
