--- a/ExamPrep_WOS/templates/car/catalogue.html
+++ b/ExamPrep_WOS/templates/car/catalogue.html
@@ -5,9 +5,8 @@
     <!-- Display a paragraph: If there are no cars yet-->
     {% if not cars %}
     <p class="no-articles">No cars yet</p>
-    {% endif %}
+    {% else %}
     <!-- Display a card with information about each car (if any)-->
-
     <section id="catalogue">
         <h1>Total cars: {{ cars.count }}</h1>
         {% for car in cars %}
@@ -29,67 +28,9 @@
                     <a href="#" class="details-btn">Details</a>
                 </div>
             </div>
-            
         {% endfor %}
-
-{##}
-{#        <!-- second car-->#}
-{#        <div class="car-card">#}
-{#            <div class="image-wrap">#}
-{#                <!-- car image -->#}
-{#                <img#}
-{#                        src="https://cdn.pixabay.com/photo/2021/09/02/09/54/kart-6593070_1280.jpg"#}
-{#                        alt="Kart"#}
-{#                />#}
-{#            </div>#}
-{#            <!-- car type -->#}
-{#            <h3>Kart</h3>#}
-{#            <!-- car model -->#}
-{#            <h1>K 2000</h1>#}
-{#            <div class="details-buttons">#}
-{#                <!-- car details button -->#}
-{#                <a href="#" class="details-btn">Details</a>#}
-{#            </div>#}
-{#        </div>#}
-{##}
-{#        <!-- third car-->#}
-{#        <div class="car-card">#}
-{#            <div class="image-wrap">#}
-{#                <!-- car image -->#}
-{#                <img#}
-{#                        src="https://cdn.pixabay.com/photo/2014/10/16/01/50/ferrari-490617_1280.jpg"#}
-{#                        alt="Open-wheel"#}
-{#                />#}
-{#            </div>#}
-{#            <!-- car type -->#}
-{#            <h3>Open-wheel</h3>#}
-{#            <!-- car model -->#}
-{#            <h1>Ferrari F1</h1>#}
-{#            <div class="details-buttons">#}
-{#                <!-- car details button -->#}
-{#                <a href="#" class="details-btn">Details</a>#}
-{#            </div>#}
-{#        </div>#}
-{##}
-{#        <!-- fourth car-->#}
-{#        <div class="car-card">#}
-{#            <div class="image-wrap">#}
-{#                <!-- car image -->#}
-{#                <img#}
-{#                        src="https://cdn.pixabay.com/photo/2017/02/18/03/57/diesel-2076482_1280.jpg"#}
-{#                        alt="Drag"#}
-{#                />#}
-{#            </div>#}
-{#            <!-- car type -->#}
-{#            <h3>Drag</h3>#}
-{#            <!-- car model -->#}
-{#            <h1>F-250</h1>#}
-{#            <div class="details-buttons">#}
-{#                <!-- car details button -->#}
-{#                <a href="#" class="details-btn">Details</a>#}
-{#            </div>#}
-{#        </div>#}
     </section>
+    {% endif %}
 {% endblock %}
 
 12
