--- a/ExamPrep_WOS/templates/car/catalogue.html
+++ b/ExamPrep_WOS/templates/car/catalogue.html
@@ -4,33 +4,29 @@
 
     <!-- Display a paragraph: If there are no cars yet-->
     {% if not cars %}
-    <p class="no-articles">No cars yet</p>
+        <p class="no-articles">No cars yet</p>
     {% else %}
-    <!-- Display a card with information about each car (if any)-->
-    <section id="catalogue">
-        <h1>Total cars: {{ cars.count }}</h1>
-        {% for car in cars %}
+        <!-- Display a card with information about each car (if any)-->
+        <section id="catalogue">
+            <h1>Total cars: {{ cars.count }}</h1>
+            {% for car in cars %}
                 <!-- first car-->
-            <div class="car-card">
-                <div class="image-wrap">
-                    <!-- car image -->
-                    <img
-                            src="{{ car.image_url }}"
-                            alt="{{ car.type }}"
-                    />
+                <div class="car-card">
+                    <div class="image-wrap">
+                        <!-- car image -->
+                        <img src="{{ car.image_url }}" alt="{{ car.type }}"/>
+                    </div>
+                    <!-- car type -->
+                    <h3>{{ car.type }}</h3>
+                    <!-- car model -->
+                    <h1>{{ car.model }}</h1>
+                    <div class="details-buttons">
+                        <!-- car details button -->
+                        <a href="{% url 'car_details' car.id %}" class="details-btn">Details</a>
+                    </div>
                 </div>
-                <!-- car type -->
-                <h3>{{ car.type }}</h3>
-                <!-- car model -->
-                <h1>{{ car.model }}</h1>
-                <div class="details-buttons">
-                    <!-- car details button -->
-                    <a href="#" class="details-btn">Details</a>
-                </div>
-            </div>
-        {% endfor %}
-    </section>
+            {% endfor %}
+        </section>
     {% endif %}
+    
 {% endblock %}
-
-12
